--- a/PaginaWeb/css/estilo.css
+++ b/PaginaWeb/css/estilo.css
@@ -12,17 +12,33 @@ body {
     text-align: center
 }
 
-.titulo3 {
-    color: aqua;
-    text-align: center
-}
-
 .piepag {
     float: none;
     padding: 15px;
     margin: 5px;
     color: rgb(29, 27, 27);
     background: #4b78ac;
+}
+
+#navegador {
+    background: white;
+    width: 98.5%;
+    border: 2px solid #0026ff;
+    float: left;
+    cursor: pointer;
+}
+
+#navegador li {
+    display: inline-block;
+    float: left;
+    list-style: none;
+    border-radius: 0;
+    padding: 5px;
+    border: 1px solid #0026ff;
+    text-align: center;
+    font: bold 14px verdana;
+    color: #5191F5;
+    background: white;
 }
 
 a:link {
